...
    <string name="logout">Logout</string>
    <string name="doctor">Doctor</string>
    <string name="social_demographic_information">Social-Demographic Information</string>
    <string name="language">Language</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="welcome_to_serene">Welcome to Serene</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_caps">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error">Error</string>
    <string name="signup">SIGNUP</string>
...
    <string name="last_two_weeks">Last Two Weeks</string>
    <string name="last_month">Last Month</string>
    <string name="specific_period">Specific Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="not_at_all">Not at all</string>
    <string name="delete">delete</string>
    <string name="google_calendar_description">Serene wants to connect with your google calendar to get your events in order to perform correctly.</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="alert">Your email has not been verified.</string>
    <string name="empty">There are no upcoming appointments</string>
    <string name="tips">Quote of the day</string>
    <string name="minute">minute(s)</string>
    <string name="hour">hour(s)</string>
    <string name="day">day(s)</string>
    <string name="week">week(s)</string>
...
    <string name="AddDocFialed">The Doctor Did not Added, Try Again</string>
    <string name="SaveDoc">Add Doctor</string>

    <!-- Delete Med Reminder Page -->
    <string name="MyDoc">My Doctor</string>
    <string name="DeleteDoc">Delete Doctor</string>
    <string name="DeleteMessageDoc">
        After deleting this doctor s/he will no longer be linked with your account and the automatic periodic reports will be disabled.
    </string>
    <string name="DeleteOKDoc">Delete</string>
    <string name="DeleteCancleDoc">Cancel</string>
    <string name="DocDeletedSuccess">The Doctor Deleted Successfully</string>
    <string name="DocDeletedFialed">The Doctor Did not Deleted, Try Again</string>

    <!-- Edit Profile Page -->
    <string name="ChooseImage">Choose Image</string>
    <string name="OldPassET">Old Password</string>
    <string name="NewPassET">New Password</string>
...
    <string name="NotCorrectCD">Only Letters Accepted in Chronic Disease</string>
    <string name="SocioInfoUpdateSuccess">Your Socio Information Updated Successfully</string>
    <string name="SocioInfoUpdateFialed">Your Socio Information did not Updated, Try Again</string>
    <string name="SaveSocioUpdate">Save</string>

    <!-- Patient Profile Page -->
    <string name="VervEmail">To Help Ensure Your Accounts Security Please Verify Your Email.</string>
    <string name="VervEmailSuccess">Email Was Sent For Verification</string>
    <string name="VervEmailFialed">Email Did Not Sent, Try Again</string>
    <string name="NoDoc">No Doctor</string>
    <string name="LogOut">Log Out</string>
    <string name="LogOutMsg">
        Are You Sure You Want To Logout ?
    </string>
    <string name="LogOutOK">Logout</string>
    <string name="LogOutCancle">Cancel</string>
    <string name="LogOutSuccess">Your are Logged Out Successfully</string>
    <string name="LogOutFialed">Something Wrong, Try Again</string>

    <!-- Log in Page -->
    <string name="ForgetPass">Reset Password</string>
    <string name="ForgetPassMessage">
        If You Do not Know Your Current Password,
...
